[package]
name = "no-unwrap"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "no-unwrap"
repository = "https://github.com/ahaoboy/no-unwrap"
homepage = "https://github.com/ahaoboy/no-unwrap"
authors = ["ahaoboy"]

[dependencies]
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
