[package]
name = "no-unwrap"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "no-unwrap"
repository = "https://github.com/ahaoboy/no-unwrap"
homepage = "https://github.com/ahaoboy/no-unwrap"
authors = ["ahaoboy"]

[dependencies]
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = "s"
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
